@@ -1,5 +1,8 @@
 2017-01-31  Markus Gans  <guru.mail@muenster.de>
-	* Refactoring FSwitch::drawCheckButton and FWidget::redraw 
+	* Refactoring FSwitch::drawCheckButton
+	* Refactoring FWidget::redraw
+	* Refactoring FMessageBox::init 
+	* Refactoring FFileDialog::init 
 
 2017-01-30  Markus Gans  <guru.mail@muenster.de>
 	* Refactoring FLabel::draw
